RASS-586 500 error when trying to submit offence without overall sentence lengh (#524)
* Fixed 500 error when trying to submit offence without overall sentence l

* removed if check

* Fixed if check in crds service method

---------

Co-authored-by: Pavilion Sahota <pavilion.sahota@justice.gov.uk>

--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "hmpps/components/court-cases-release-dates/offence-card/macro.njk" import offenceCard %}
 {%- from "moj/components/banner/macro.njk" import mojBanner -%}
-{% from "govuk/components/inset-text/macro.njk"          import govukInsetText %}
+{% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 
@@ -21,7 +21,7 @@
             {% endif %}
         </h1>
         
-        {% if courtAppearance.warrantType === 'SENTENCING' and courtAppearance.hasOverallSentenceLength %}
+        {% if courtAppearance.warrantType === 'SENTENCING' and courtAppearance.hasOverallSentenceLength === 'true' %}
             {{ govukSummaryList({
                 rows: [
                     {
