RASS-590 RASS-591 RASS-589 RASS-588 integrate ui with backend for appearance types

--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -20,7 +20,7 @@
                             text: "Next hearing type"
                         },
                             value: {
-                            text: courtAppearance.nextHearingType
+                            text: nextHearingAppearanceType
                         },
                             actions: {
                             items: [
