--- a/server/views/pages/courtAppearance/next-hearing-type.njk
+++ b/server/views/pages/courtAppearance/next-hearing-type.njk
@@ -2,15 +2,9 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
-{% set pageTitle = applicationName + " - Next hearing type" %}
-{% block content %}
-    {{ super() }}
-    <div class="govuk-grid-row govuk-!-margin-top-4">
-        <div class="govuk-grid-column-two-thirds">
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-next-hearing-type{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
-                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                {% include "../../partials/nextAppearanceCaption.njk" %}
-                {{ govukRadios({
+{% set radiosData = {
+                    id: "nextHearingType",
+                    errorMessage: errors | findError('nextHearingType'),
                     name: "nextHearingType",
                     fieldset: {
                         legend: {
@@ -19,19 +13,28 @@
                         classes: "govuk-fieldset__legend--l"
                         }
                     },
-                    items: [
-                        {
-                            value: "Court appearance",
-                            text: "Court appearance",
-                            checked: nextHearingTypeForm.nextHearingType === "Court appearance"
-                        },
-                        {
-                            value: "Video link",
-                            text: "Video link",
-                            checked: nextHearingTypeForm.nextHearingType === "Video link"
-                        }
-                    ]
-                }) }}
+                    items: []
+    } %}
+
+{% for appearanceType in appearanceTypes %}
+    {%- set appearanceTypeRow = {
+        value: appearanceType.appearanceTypeUuid,
+        text: appearanceType.description,
+        checked: appearanceType.appearanceTypeUuid === nextHearingTypeForm.nextHearingType
+    } -%}
+    {{ radiosData.items.push(appearanceTypeRow) }}
+{% endfor %}
+
+
+{% set pageTitle = applicationName + " - Next hearing type" %}
+{% block content %}
+    {{ super() }}
+    <div class="govuk-grid-row govuk-!-margin-top-4">
+        <div class="govuk-grid-column-two-thirds">
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-next-hearing-type{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
+                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+                {% include "../../partials/nextAppearanceCaption.njk" %}
+                {{ govukRadios(radiosData) }}
 
                 {{ govukButton({
                     text: "Continue"
