--- a/server/views/pages/courtAppearance/save-court-case.njk
+++ b/server/views/pages/courtAppearance/save-court-case.njk
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-
+    {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
             <div class="govuk-!-margin-top-6">
