--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -161,7 +161,7 @@
             text: "Hearing type"
             },
                 value: {
-                text: appearanceType.description
+                text: appearanceTypeDescription
             },
                 actions: {
                 items: [
