RASS-590 RASS-591 RASS-589 RASS-588 integrate ui with backend for appearance types (#525)
* RASS-590 RASS-591 RASS-589 RASS-588 integrate ui with backend for appearance types

* int test fixes

--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -144,7 +144,7 @@
             text: "Court name"
             },
                 value: {
-                text: courtMap[appearance.nextHearingCourtCode] if courtMap[appearance.nextHearingCourtCode] else appearance.nextHearingCourtCode
+                text: courtMap[appearance.nextHearingCourtCode]
             },
                 actions: {
                 items: [
@@ -161,7 +161,7 @@
             text: "Hearing type"
             },
                 value: {
-                text: appearance.nextHearingType
+                text: appearanceTypeDescription
             },
                 actions: {
                 items: [
