--- a/server/views/pages/courtAppearance/task-list.njk
+++ b/server/views/pages/courtAppearance/task-list.njk
@@ -40,13 +40,18 @@
                     <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                     {{ govukButton({
                         text: "Finish and save",
-                        disabled: model.isAllMandatoryItemsComplete() == false
+                        disabled: model.isAllMandatoryItemsComplete() === false,
+                        classes: "govuk-!-margin-right-2"
                     }) }}
-                    {{ govukButton({
-                        text: "Save and come back later",
-                        href: "/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft-task-list"
-                        classes: "govuk-button--secondary"
-                    }) }}
+                </form>
+
+                <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft-task-list">
+                  <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+                  {{ govukButton({
+                  text: "Save and come back later",
+                  classes: "govuk-button--secondary",
+                  disabled: model.isAppearanceInformationComplete() === false
+                  }) }}
                 </form>
         </div>
     </div>
