--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -45,14 +45,13 @@
                     </div>
 
                     <div class="govuk-tabs__panel" id="drafts">
-                        <p>Viewing draft appearances on this tab is currently unsupported</p>
 
-{#                        {% for appearance in courtCaseDetails.draftAppearances | reverse %}#}
-{#                            {% if loop.index != 1 %}#}
-{#                                <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">#}
-{#                            {%  endif %}#}
-{#                            {{ appearanceCard(appearance, courtCaseDetails, 'true') }}#}
-{#                        {% endfor %}#}
+                        {% for appearance in courtCaseDetails.draftAppearances | reverse %}
+                            {% if loop.index != 1 %}
+                                <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+                            {%  endif %}
+                            {{ appearanceCard(appearance, courtCaseDetails, 'true') }}
+                        {% endfor %}
                     </div>
                 </div>
             </div>
