RASS-430 Separate retrieval of draft appearance into its own route

--- a/server/views/pages/courtAppearance/save-court-case.njk
+++ b/server/views/pages/courtAppearance/save-court-case.njk
@@ -23,7 +23,7 @@
             </p>
             {{ govukButton({
                 text: "Continue",
-                href: "/person/{{ nomsId }}/"
+                href: "/person/" + nomsId
             }) }}
         </div>
     </div>
