--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -81,7 +81,7 @@
                 <li class="offence-card-action-link">
 
                             {% if draft == 'true' %}
-                            <a class="govuk-link--no-visited-state" href="/person/{{ nomsId }}/edit-court-case/{{ courtCaseDetails.courtCaseUuid }}/resume-court-appearance/{{ appearance.appearanceUuid }}/task-list">
+                            <a class="govuk-link--no-visited-state" href="/person/{{ nomsId }}/edit-court-case/{{ courtCaseDetails.courtCaseUuid }}/add-court-appearance/{{ appearance.appearanceUuid }}/resume-draft">
                             Continue adding appearance information
                             {% else %}
                             <a class="govuk-link--no-visited-state" href="/person/{{ nomsId }}/edit-court-case/{{ courtCaseDetails.courtCaseUuid }}/edit-court-appearance/{{ appearance.appearanceUuid }}/details">
