RASS-430 update court cases add a court case task list (#528)
* WIP save draft court case

* WIP save draft court case

* Wired up save and come back later for the task list

* RASS-430 Move mapping of session court case/apperances to mapping utils

* RASS-430 Prevent errors when only drafts exist

* RASS-430 Remove unused import

* RASS-430 Retrieve draft court appearance

* Added int tests

* Fixed lint errors

* RASS-430 Placeholder text when no saved/draft court appearances (#529)

* RASS-430 Change condition to retrieve draft court appearance

* RASS-430 null-safe draft appearances

* RASS-430 null-safe draft appearances

* Fixed int test

* RASS-430 Separate retrieval of draft appearance into its own route

---------

Co-authored-by: Pavilion Sahota <pavilion.sahota@justice.gov.uk>
Co-authored-by: Dan Benton <daniel.benton@digital.justice.gov.uk>
Co-authored-by: danbenton-mojdt <113102670+danbenton-mojdt@users.noreply.github.com>

--- a/server/views/pages/courtAppearance/save-court-case.njk
+++ b/server/views/pages/courtAppearance/save-court-case.njk
@@ -11,7 +11,7 @@
             <span class="govuk-caption-l">
                 Add a court case
             </span>
-            <h2 class="govuk-heading-l">Court case on {{ courtAppearance.warrantDate | formatDate }} at {{ courtAppearanceCourtName }} has been saved</h2>
+            <h1 class="govuk-heading-l">Court case on {{ courtAppearance.warrantDate | formatDate }} at {{ courtAppearanceCourtName }} has been saved</h1>
             {{ govukInsetText({
                 text: "This appearance has not been saved to NOMIS"
             }) }}
@@ -23,7 +23,7 @@
             </p>
             {{ govukButton({
                 text: "Continue",
-                href: "/person/{{ nomsId }}/"
+                href: "/person/" + nomsId
             }) }}
         </div>
     </div>
