--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -12,8 +12,14 @@
     <div class="govuk-grid-row">
 
     <div class="govuk-grid-column-full">
-                <h1 class="govuk-heading-l">Appearances for {{ courtCaseDetails.latestCaseReference }}
-                    at {{ courtMap[courtCaseDetails.latestCourtCode] if courtMap[courtCaseDetails.latestCourtCode] else courtCaseDetails.latestCourtCode }}</h1>
+
+                <h1 class="govuk-heading-l">
+                    {% if courtCaseDetails.appearances | length == 0 %}
+                        Appearances
+                    {%  else %}
+                        Appearances for {{ courtCaseDetails.latestCaseReference }} at {{ courtMap[courtCaseDetails.latestCourtCode] if courtMap[courtCaseDetails.latestCourtCode] else courtCaseDetails.latestCourtCode }}
+                    {%  endif %}
+                </h1>
 
                 <div class="govuk-tabs" data-module="govuk-tabs">
                     <h2 class="govuk-tabs__title">
@@ -34,6 +40,9 @@
                     </ul>
 
                     <div class="govuk-tabs__panel" id="appearances">
+                        {% if courtCaseDetails.appearances | length == 0 %}
+                         <p>There are no saved appearances.</p>
+                        {%  endif %}
                         {% for appearance in courtCaseDetails.appearances %}
                                 {% if loop.index != 1 %}
                                     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
@@ -45,14 +54,15 @@
                     </div>
 
                     <div class="govuk-tabs__panel" id="drafts">
-                        <p>Viewing draft appearances on this tab is currently unsupported</p>
-
-{#                        {% for appearance in courtCaseDetails.draftAppearances | reverse %}#}
-{#                            {% if loop.index != 1 %}#}
-{#                                <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">#}
-{#                            {%  endif %}#}
-{#                            {{ appearanceCard(appearance, courtCaseDetails, 'true') }}#}
-{#                        {% endfor %}#}
+                        {% if courtCaseDetails.draftAppearances | length == 0 %}
+                            <p>There are no draft appearances.</p>
+                        {%  endif %}
+                        {% for appearance in courtCaseDetails.draftAppearances | reverse %}
+                            {% if loop.index != 1 %}
+                                <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+                            {%  endif %}
+                            {{ appearanceCard(appearance, courtCaseDetails, 'true') }}
+                        {% endfor %}
                     </div>
                 </div>
             </div>
@@ -69,10 +79,12 @@
         <div class="govuk-grid-column-one-half">
             <ul class="offence-card-actions-list">
                 <li class="offence-card-action-link">
-                        <a class="govuk-link--no-visited-state" href="/person/{{ nomsId }}/edit-court-case/{{ courtCaseDetails.courtCaseUuid }}/edit-court-appearance/{{ appearance.appearanceUuid }}/details">
+
                             {% if draft == 'true' %}
+                            <a class="govuk-link--no-visited-state" href="/person/{{ nomsId }}/edit-court-case/{{ courtCaseDetails.courtCaseUuid }}/add-court-appearance/{{ appearance.appearanceUuid }}/resume-draft">
                             Continue adding appearance information
                             {% else %}
+                            <a class="govuk-link--no-visited-state" href="/person/{{ nomsId }}/edit-court-case/{{ courtCaseDetails.courtCaseUuid }}/edit-court-appearance/{{ appearance.appearanceUuid }}/details">
                             Edit
                             {% endif %}
                         </a>
