RASS-438 Update existing drafts, add draft button to offence date screen

--- a/server/views/pages/offence/offence-code.njk
+++ b/server/views/pages/offence/offence-code.njk
@@ -36,12 +36,22 @@
                     ],
                     errorMessage: errors | findError('unknownCode')
                 })}}
-
+                <div class="govuk-button-group">
 
                 {{ govukButton({
                     text: "Continue"
                 }) }}
-            </form>
+                    </form>
+                    <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
+                    {{ govukButton({
+                        text: "Save as draft",
+                        classes: "govuk-button--secondary",
+                        attributes: {
+                            "data-qa": "submitDraft"
+                        }
+                    }) }}
+                    </form>
+
 
 {% endblock %}
 
