--- a/server/views/pages/courtAppearance/save-court-case.njk
+++ b/server/views/pages/courtAppearance/save-court-case.njk
@@ -23,7 +23,8 @@
             </p>
             {{ govukButton({
                 text: "Continue",
-                href: "/person/" + nomsId
+                href: "/person/" + nomsId,
+                attributes: {  'data-qa': 'continue-button' }
             }) }}
         </div>
     </div>
