--- a/server/views/pages/courtAppearance/task-list.njk
+++ b/server/views/pages/courtAppearance/task-list.njk
@@ -42,7 +42,7 @@
                 text: "Finish and save",
                 disabled: model.isAllMandatoryItemsComplete() === false,
                 attributes: {
-                  "data-qa": "submit"
+                  "data-qa": "continue-button"
                 }
               }) }}
             </form>
