--- a/server/views/pages/offence/alternative-sentence-length.njk
+++ b/server/views/pages/offence/alternative-sentence-length.njk
@@ -62,7 +62,8 @@
                 {% endcall %}
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 
