--- a/server/views/pages/offence/confirm-offence.njk
+++ b/server/views/pages/offence/confirm-offence.njk
@@ -65,7 +65,8 @@
 
 
                 {{ govukButton({
-                    text: "Confirm and continue"
+                    text: "Confirm and continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
             <p class="govuk-body">
