--- a/server/views/pages/offence/consecutive-to.njk
+++ b/server/views/pages/offence/consecutive-to.njk
@@ -23,7 +23,8 @@
                 }) }}
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 {% endblock %}
