--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -155,7 +155,8 @@
                 }) }}
 
                 {{ govukButton({
-                    text: "Accept changes"
+                    text: "Accept changes",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
         </div>
