--- a/server/views/pages/offence/period-length.njk
+++ b/server/views/pages/offence/period-length.njk
@@ -60,7 +60,8 @@
                 {% endif %}
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 
