--- a/server/views/pages/offence/sentence-length.njk
+++ b/server/views/pages/offence/sentence-length.njk
@@ -53,7 +53,8 @@
                 </p>
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 
