--- a/server/views/pages/courtAppearance/alternative-sentence-length.njk
+++ b/server/views/pages/courtAppearance/alternative-sentence-length.njk
@@ -64,7 +64,8 @@
                 {% endcall %}
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
         </div>
