--- a/server/views/pages/courtAppearance/next-hearing-court-select.njk
+++ b/server/views/pages/courtAppearance/next-hearing-court-select.njk
@@ -37,7 +37,8 @@
                 }) }}
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 
