--- a/server/views/pages/courtAppearance/next-hearing-date.njk
+++ b/server/views/pages/courtAppearance/next-hearing-date.njk
@@ -74,7 +74,8 @@
 
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 
