--- a/server/views/pages/courtAppearance/overall-case-outcome.njk
+++ b/server/views/pages/courtAppearance/overall-case-outcome.njk
@@ -59,7 +59,8 @@
                 {{ govukRadios(radiosData) }}
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 
