--- a/server/views/pages/courtAppearance/overall-conviction-date-applied-all.njk
+++ b/server/views/pages/courtAppearance/overall-conviction-date-applied-all.njk
@@ -39,7 +39,8 @@
                 }) }}
 
                 {{ govukButton({
-                    text: "Save and continue"
+                    text: "Save and continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 
