--- a/server/views/pages/courtAppearance/overall-sentence-length.njk
+++ b/server/views/pages/courtAppearance/overall-sentence-length.njk
@@ -84,7 +84,8 @@
                 }) }}
 
                 {{ govukButton({
-                    text: "Save and continue"
+                    text: "Save and continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
 
             </form>
