--- a/server/views/pages/courtAppearance/tagged-bail.njk
+++ b/server/views/pages/courtAppearance/tagged-bail.njk
@@ -56,7 +56,8 @@
                     }) }}
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 
