--- a/server/views/pages/offence/count-number.njk
+++ b/server/views/pages/offence/count-number.njk
@@ -51,7 +51,8 @@
                 }) }}
 
                 {{ govukButton({
-                  text: "Save and continue"
+                  text: "Save and continue",
+                  attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 
