--- a/server/views/pages/offence/fine-amount.njk
+++ b/server/views/pages/offence/fine-amount.njk
@@ -24,7 +24,8 @@
     }) }}
 
   {{ govukButton({
-    text: "Continue"
+    text: "Continue",
+    attributes: {  'data-qa': 'continue-button' }
   }) }}
   </form>
 {% endblock %}
