--- a/server/views/pages/offence/lookup-offence-outcome.njk
+++ b/server/views/pages/offence/lookup-offence-outcome.njk
@@ -61,7 +61,8 @@
                 }) }}
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 
