--- a/server/views/pages/offence/offence-conviction-date.njk
+++ b/server/views/pages/offence/offence-conviction-date.njk
@@ -44,7 +44,8 @@
                 }) }}
 
                 {{ govukButton({
-                    text: "Save and continue"
+                    text: "Save and continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 
