--- a/server/views/pages/offence/offence-date.njk
+++ b/server/views/pages/offence/offence-date.njk
@@ -82,11 +82,19 @@
                 {% endcall %}
 
                 <div class="govuk-button-group">
-                    <button type="submit" class="govuk-button" data-module="govuk-button" formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-offence-date{{ "?submitToEditOffence=true" if submitToEditOffence }}">
+                    <button type="submit"
+                            class="govuk-button"
+                            data-module="govuk-button"
+                            data-qa="continue-button"
+                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-offence-date{{ "?submitToEditOffence=true" if submitToEditOffence }}">
                         Continue
                     </button>
 
-                    <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
+                    <button type="submit"
+                            class="govuk-button govuk-button--secondary"
+                            data-module="govuk-button"
+                            data-qa="save-draft-button"
+                            formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-draft">
                         Save as draft
                     </button>
                 </div>
