--- a/server/views/pages/offence/sentence-length-mismatch.njk
+++ b/server/views/pages/offence/sentence-length-mismatch.njk
@@ -47,7 +47,8 @@
             }) }}
 
             {{ govukButton({
-                text: "Continue"
+                text: "Continue",
+                attributes: {  'data-qa': 'continue-button' }
             }) }}
         </form>
        
