--- a/server/views/pages/offence/sentence-serve-type.njk
+++ b/server/views/pages/offence/sentence-serve-type.njk
@@ -52,7 +52,8 @@
 
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 {% endblock %}
