--- a/server/views/pages/offence/terror-related.njk
+++ b/server/views/pages/offence/terror-related.njk
@@ -36,7 +36,8 @@
 
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Continue",
+                    attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
 {% endblock %}
