--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -151,7 +151,7 @@
                                 offenceName: offenceMap[offence.offenceCode],
                                 offenceStartDate: offence.offenceStartDate | formatDate,
                                 offenceEndDate: offence.offenceEndDate | formatDate,
-                                outcome: offenceOutcomeMap[offence.outcomeUuid] | outcomeValueOrLegacy(offence.legacyData),
+                                outcome: offence.outcome.outcomeName | outcomeValueOrLegacy(offence.legacyData),
                                 countNumber: offence.sentence.countNumber,
                                 convictionDate: offence.sentence.convictionDate | formatDate,
                                 terrorRelated: offence.terrorRelated,
